Cleanup web.xml
* Removes CSP and Clickjacking filters since those are only relevant for frontend applications and we no longer bundle the frontend.
* Remove error page config because an error handler is already defined in EmbeddedJettyServer.
+ Remove session config because we do not use servlet sessions.

Signed-off-by: nscuro <nscuro@protonmail.com>